# betamedical

jarvis/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
jarvis/backend/: .env.example  package-lock.json  package.json
jarvis/backend/prisma/: schema.prisma
jarvis/backend/src/: index.ts
jarvis/src/: App.tsx  index.css
jarvis/src-tauri/: Cargo.toml  tauri.conf.json
jarvis/src-tauri/src/: main.rs
jarvis/src/hooks/: useProjects.ts  useTasks.ts
jarvis/src/lib/: api.ts  eventBus.ts
jarvis/src/pages/: Dashboard.tsx  Projects.tsx  Tasks.tsx
jarvis/src/store/: useAppStore.ts
jarvis/src/types/: index.ts
projetofabio-main/: .gitignore  README.md  package-lock.json  package.json  render.yaml  tsconfig.json  vercel.json
projetofabio-main/api/: index.ts
projetofabio-main/backend/: .env.example  eslint.config.js  package.json  tsconfig.json
projetofabio-main/backend/data/: demo-db.json
projetofabio-main/backend/scripts/: seed-firestore.ts  set-claims.ts
projetofabio-main/backend/src/: app.ts  auth.ts  env.ts  errors.ts  firebaseAdmin.ts  index.ts  operations.ts  store.ts
projetofabio-main/frontend/: .env.example  eslint.config.js  index.html  package.json
projetofabio-main/shared/: package.json  tsconfig.json
testebigquery-master/: .gitignore
testebigquery-master/api/: .gitignore  _sif_list_check.js  _sif_list_check2.js  bigquery.js  package.json  server.js
testebigquery-master/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
(+79 files in other folders)
